# Security-Template

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  SUBMISSION.md  package.json  tsconfig.json
docs/: ANCHOR_CONSTRAINTS.md  BEST_PRACTICES.md  SECURITY_GUIDE.md  VISUAL_GUIDE.md
programs/01-missing-signer-check/: Cargo.toml  README.md
programs/01-missing-signer-check/src/: lib.rs  secure.rs  vulnerable.rs
programs/02-missing-owner-check/: Cargo.toml  README.md
programs/02-missing-owner-check/src/: lib.rs  secure.rs  vulnerable.rs
programs/03-arithmetic-overflow/: Cargo.toml  README.md
programs/03-arithmetic-overflow/src/: lib.rs  secure.rs  vulnerable.rs
programs/04-account-data-matching/: Cargo.toml  README.md
programs/04-account-data-matching/src/: lib.rs  secure.rs  vulnerable.rs
programs/05-arbitrary-cpi/: Cargo.toml  README.md
programs/05-arbitrary-cpi/src/: lib.rs  secure.rs  vulnerable.rs
programs/06-reentrance-attack/: Cargo.toml  README.md
programs/06-reentrance-attack/src/: lib.rs  secure.rs  vulnerable.rs
programs/07-type-cosplay/: Cargo.toml  README.md
programs/07-type-cosplay/src/: lib.rs  secure.rs  vulnerable.rs
tests/: 01-missing-signer-check.ts  02-missing-owner-check.ts  03-arithmetic-overflow.ts  04-account-data-matching.ts  05-arbitrary-cpi.ts  06-reentrance-attack.ts  07-type-cosplay.ts
