[package]
name = "missing-owner-check"
version = "0.1.0"
description = "Educational example: Missing Owner Check vulnerability and fix"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "missing_owner_check"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
spl-token = "4.0.0"
