[package]
name = "arithmetic-overflow"
version = "0.1.0"
description = "Educational example: Arithmetic Overflow/Underflow vulnerability and fix"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arithmetic_overflow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.0"

[profile.release]
overflow-checks = true
