[package]
name = "arbitrary-cpi"
version = "0.1.0"
description = "Educational example: Arbitrary CPI vulnerability"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arbitrary_cpi"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
spl-token = "4.0.0"
